# extension_sdk_demo

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/androidTest/java/com/example/extension_sdk_demo/common/: ExtensionSdkDemoMethodETest.java
android/src/main/cpp/: CMakeLists.txt  extension_sdk_demo.cpp
android/src/main/cpp/common/: ExtensionSdkDemoConfig.h  ExtensionSdkDemoDefine.h  ExtensionSdkDemoLanguageTypeE.h  ExtensionSdkDemoListener.cpp  ExtensionSdkDemoMethodTypeE.h  ExtensionSdkDemoObject.h  ExtensionSdkDemoParamsTypeE.cpp  ExtensionSdkDemoParamsTypeE.h  ExtensionSdkDemoSdkApi.cpp  ExtensionSdkDemoSdkApi.h  ExtensionSdkDemoTestRoute.h
android/src/main/cpp/cpp/: ExtensionSdkDemoApiCpp.cpp  ExtensionSdkDemoApiCpp.h  ExtensionSdkDemoObjectCpp.cpp
android/src/main/cpp/java/: ExtensionSdkDemoApiJava.cpp  ExtensionSdkDemoApiJava.h  ExtensionSdkDemoSdkApiJava.cpp  ExtensionSdkDemoSdkApiJava.h
android/src/main/cpp/jni/: jni_helper.cpp  jni_helper.h
android/src/main/cpp/jni1/: extension_sdk_demo_jni_1.cmake  extension_sdk_demo_jni_1.cpp  extension_sdk_demo_jni_listener_1.cpp  extension_sdk_demo_jni_listener_1.h
android/src/main/cpp/jni2/: extension_sdk_demo_jni_2.cmake  extension_sdk_demo_jni_2.cpp  extension_sdk_demo_jni_2_api.cpp  extension_sdk_demo_jni_2_api.h  extension_sdk_demo_jni_2_listener.cpp  extension_sdk_demo_jni_2_listener.h
android/src/main/cpp/test4/common/: ExtSdkMethodType.cpp  ExtSdkMethodType.h  ExtSdkObject.cpp
android/src/main/cpp/test4/core/: ExtSdkApi.cpp
android/src/main/cpp/test4/core/wrapper/: ExtSdkChatRoom.cpp  ExtSdkClient.cpp  ExtSdkContact.cpp  ExtSdkContact.h  ExtSdkConversion.cpp  ExtSdkPush.cpp  ExtSdkPush.h  ExtSdkUserInfo.cpp
android/src/main/cpp/test4/java/: ExtSdkApiJni.cpp  ExtSdkApiJni.h  ExtSdkCallback.cpp  ExtSdkJniHelper.cpp  ExtSdkListenerJava.cpp  ExtSdkListenerJava.h  ExtSdkObjectJava.cpp
android/src/main/cpp/wrapper/: extension_sdk_demo_c_wrapper.c  extension_sdk_demo_c_wrapper.h  extension_sdk_demo_cpp_wrapper.cpp  extension_sdk_demo_cpp_wrapper.h  extension_sdk_demo_wrapper.cmake
android/src/main/java/com/example/extension_sdk_demo/: ExtensionSdkDemoAdapter1.java  ExtensionSdkDemoAdapter1Method2.java  ExtensionSdkDemoAdapterJNI1.java  ExtensionSdkDemoAdapterJNI2.java  ExtensionSdkDemoAdapterJNIListener1.java  ExtensionSdkDemoAdapterJNIListener2.java  ExtensionSdkDemoMethod.java  ExtensionSdkDemoPlugin.java
android/src/main/java/com/example/extension_sdk_demo/commcon/: ExtensionSdkDemoApi.java  ExtensionSdkDemoCallback.java  ExtensionSdkDemoMethod.java  ExtensionSdkDemoMethodE.java
android/src/main/java/com/example/extension_sdk_demo/common/: ExtensionSdkDemoApi.java  ExtensionSdkDemoBaseListener.java  ExtensionSdkDemoCallback.java  ExtensionSdkDemoConfig.java  ExtensionSdkDemoMessageListener.java  ExtensionSdkDemoMethodTypeE.java  ExtensionSdkDemoParamsTypeE.java  ExtensionSdkDemoThreadUtil.java
android/src/main/java/com/example/extension_sdk_demo/flutter/: ExtensionSdkDemoApiFlutter.java  ExtensionSdkDemoMessageListenerFlutter.java
android/src/main/java/com/example/extension_sdk_demo/jni/: ExtensionSdkDemoApiJni.java
android/src/main/java/com/example/extension_sdk_demo/sdk/: ExtensionSdkDemoSdkApi.java
android/src/main/java/com/example/extension_sdk_demo/test4/: README.md
android/src/main/java/com/example/extension_sdk_demo/test4/common/: ExtSdkApi.java  ExtSdkBaseListener.java  ExtSdkCallback.java  ExtSdkConfig.java  ExtSdkMessageListener.java  ExtSdkMethodType.java  ExtSdkThreadUtil.java
android/src/main/java/com/example/extension_sdk_demo/test4/flutter/: ExtSdkApiFlutter.java  ExtSdkMessageListenerFlutter.java
android/src/main/java/com/example/extension_sdk_demo/test4/jni/: ExtSdkApiJni.java  ExtSdkApiJniR.java  ExtSdkCallbackJniR.java
docs/: design.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/extension_sdk_demo_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: extension_sdk_demo.podspec
ios/Classes/: ExtensionSdkDemoPlugin.h  ExtensionSdkDemoPlugin.m
lib/: extension_sdk_demo.dart
sdk/cpp/: extension_sdk_demo.cmake
sdk/cpp/common/: ExtensionSdkDemoConfig.cpp  ExtensionSdkDemoLanguageTypeE.cpp  ExtensionSdkDemoListener.h
sdk/cpp/cpp/: ExtensionSdkDemoApiCpp.cpp  ExtensionSdkDemoApiCpp.h  ExtensionSdkDemoObjectCpp.h
sdk/cpp/java/: ExtensionSdkDemoApiJava.cpp  ExtensionSdkDemoApiJava.h  ExtensionSdkDemoObjectJava.cpp  ExtensionSdkDemoObjectJava.h  ExtensionSdkDemoSdkApiJava.cpp  ExtensionSdkDemoSdkApiJava.h
sdk/cpp/jni/: jni_helper.cpp
sdk/cpp/jni2/: extension_sdk_demo_jni_2.cmake  extension_sdk_demo_jni_2_api.cpp  extension_sdk_demo_jni_2_listener.cpp  extension_sdk_demo_jni_2_listener.h
sdk/cpp/test4/common/: ExtSdkDefine.h  ExtSdkListener.h  ExtSdkTest.cpp  ExtSdkTest.h
sdk/cpp/test4/core/: ExtSdkApi.cpp  ExtSdkApi.h
sdk/cpp/test4/core/wrapper/: ExtSdkChatRoom.h  ExtSdkClient.cpp  ExtSdkClient.h  ExtSdkConversion.h  ExtSdkGroup.cpp  ExtSdkGroup.h  ExtSdkUserInfo.h
sdk/cpp/test4/java/: ExtSdkObjectJava.h
sdk/cpp/wrapper/: extension_sdk_demo_cpp_wrapper.cpp  extension_sdk_demo_cpp_wrapper.h  extension_sdk_demo_wrapper.cmake
test/: extension_sdk_demo_test.dart
